--- a/1_introduction.tex
+++ b/1_introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-The Antarctic Impulsive Transient Antenna (ANITA) experiment is a NASA-funded, balloon-borne experiment aiming primarily to detect Ultra-High-Energy (UHE) neutrinos and cosmic rays~\cite{ANITA1detector,ANITA1paper,ANITA2paper,ANITA2erratum}.
+The ANtarctic Impulsive Transient Antenna (ANITA) experiment is a NASA-funded, balloon-borne experiment aiming primarily to detect Ultra-High-Energy (UHE) neutrinos and cosmic rays~\cite{ANITA1detector,ANITA1paper,ANITA2paper,ANITA2erratum}.
 UHE neutrinos may be produced when cosmic rays interact with the
 cosmic microwave background, either through the Greisen Zatsepin
 Kuzmin (GZK)~\cite{greisen1966end,zatsepin1966gt} mechanism or through photo-disintegration, or directly from an astrophysical source.
@@ -64,7 +64,7 @@ The third ANITA payload (ANITA-III) launched on December 18$^{\text{th}}$, 2014 
 NASA Long Duration Balloon (LDB) facility near McMurdo Station, Antarctica.
 ANITA-III followed the polar vortex flying at the altitude of 37\,km for
 22 days until January 9$^{\text{th}}$, 2015 when the flight was terminated
-near Australian Davis Station.
+near the Australian Davis Station.
 Similarly, the fourth ANITA payload (ANITA-IV) launched on December 2$^{\text{nd}}$, 2016 from the NASA LDB facility in Antarctica and landed approximately 100\,km from the South Pole Station on December 29$^{\text{th}}$, 2016.
 
 
@@ -94,8 +94,8 @@ signal with a mean sample rate of 2.6\,GSa/s.}
 
 
 The ANITA-III and ANITA-IV instruments were similar to the two previous
-ones~\cite{ANITA1paper,ANITA2paper}, using 48 dual-polarization quad-ridged horn antennas with bandwidth from 200 to 1200\,MHz (ANITA-I had 32 and ANITA-II had 40). 
-The antennas were arranged in three rings forming 16 azimuthal sectors per ring (the top ring is divided into two layers to fit into the launch envelope specifications), as shown in Figure~\ref{fig:intro_ANITAconcept}.
+ones~\cite{ANITA1paper,ANITA2paper}, using 48 dual-polarization quad-ridged horn antennas with bandwidth from 200 to 1200\,MHz. 
+The antennas were arranged in three rings forming 16 azimuthal sectors per ring, with the top ring divided into two layers to fit the launch envelope specifications, as shown in Figure~\ref{fig:intro_ANITAconcept}.
 
 Figure~\ref{fig:ANITA3_signalChain} shows a schematic of the ANITA-III signal chain. 
 The receiving antenna measures vertical and horizontal polarization components of incident radio waves, which then follow twin paths. 
