--- a/3_radioSignal.tex
+++ b/3_radioSignal.tex
@@ -27,7 +27,7 @@ Information about each flavor is stored separately so the sensitivity to each fl
 The neutrino event undergoes a charged/neutral current interaction in
 $69\%$/32\% of cases.
 %of the events at random are chosen to be charged current and the remainder to be neutral current.
-For charged current electron neutrino interactions the electromagnetic
+For charged current electron neutrino interactions, the electromagnetic
 component is calculated as $1-y$, where $y$ is the inelasticity and is
 approximated by a double-exponential function~\cite{gandhi}. 
 In all other cases the electromagnetic component is considered negligible.
