--- a/9_appendix.tex
+++ b/9_appendix.tex
@@ -29,7 +29,7 @@ Other programs test a portion of the full \icemc tool:
     \item {\tt testWAIS} simulates the WAIS pulser as described in Subsection~\ref{subsec:wais}.
 \end{itemize}
 
-To produce ANITA-like output files and use more advanced features of \icemc, the installation of \texttt{libFFTWwrapper} (\url{https://github.com/nichol77/libRootFftwWrapper/}) and the ANITA \texttt{eventReaderRoot} (\url{https://github.com/anitaNeutrino/eventReaderRoot}) is necessary. 
+To produce ANITA-like output files and use more advanced features of \icemc, the installation of \texttt{libRootFFTWwrapper} (\url{https://github.com/nichol77/libRootFftwWrapper/}) and the ANITA \texttt{eventReaderRoot} (\url{https://github.com/anitaNeutrino/eventReaderRoot}) is necessary. 
 
 
 %\section{Limit derivation}
