--- a/references.bib
+++ b/references.bib
@@ -55,7 +55,7 @@
 @article{ANITA1paper,
   title = {New Limits on the Ultrahigh Energy Cosmic Neutrino Flux from the ANITA Experiment},
   author = {Gorham, P. W. and Allison, P. and Barwick, S. W. and Beatty, J. J. and Besson, D. Z. and Binns, W. R. and Chen, C. and Chen, P. and Clem, J. M. and Connolly, A. and Dowkontt, P. F. and DuVernois, M. A. and Field, R. C. and Goldstein, D. and Goodhue, A. and Hast, C. and Hebert, C. L. and Hoover, S. and Israel, M. H. and Kowalski, J. and Learned, J. G. and Liewer, K. M. and Link, J. T. and Lusczek, E. and Matsuno, S. and Mercurio, B. C. and Miki, C. and Mio\ifmmode \check{c}\else \v{c}\fi{}inovi\ifmmode \acute{c}\else \'{c}\fi{}, P. and Nam, J. and Naudet, C. J. and Ng, J. and Nichol, R. J. and Palladino, K. and Reil, K. and Romero-Wolf, A. and Rosen, M. and Ruckman, L. and Saltzberg, D. and Seckel, D. and Varner, G. S. and Walz, D. and Wang, Y. and Wu, F.},
-  collaboration = {ANITA Collaboration},
+  collaboration = {ANITA},
   journal = {Phys. Rev. Lett.},
   volume = {103},
   issue = {5},
