--- a/2_eventGeometry.tex
+++ b/2_eventGeometry.tex
@@ -1,4 +1,4 @@
-\section{Event Geometry}
+\section{Event geometry}
 \label{sec:eventGeometry}
 
 \subsection{Modeling the Antarctic continent}
@@ -22,20 +22,20 @@ The area of each bin is calculated following:
 latitude and longitude.
 It is also possible to run the simulation using BEDMAP ice thickness
 and subglacial topographic model of Antarctica, developed by the
-British Antarctic Survey~\cite{bedmap}
+British Antarctic Survey~\cite{bedmap}.
 This model has a much more accurate representation of the ice in
 Antarctica, but it is much slower to run, so by default we use
-Crust2.0.
+Crust 2.0.
 %When using BEDMAP the total volume of ice in Antarctica is found to be 
 %$2.47956e \times 10^{16}$\,m$^3$. 
-The \icemc program finds $2.976 \times 10^{16}$ m$^3$ of Antarctic ice in this model, compared to $3.011 \times 10^{16}$ m$^3$ reported by the US Geological Survey~\cite{usgs} (1.15\% difference).
+Using Crust 2.0, the \icemc program finds $2.976 \times 10^{16}$ m$^3$ of Antarctic ice in this model, compared to $3.011 \times 10^{16}$ m$^3$ reported by the US Geological Survey~\cite{usgs}, a 1.15\% difference.
 
-\subsection{Picking Interaction Point and Direction}
+\subsection{Picking interaction point and direction}
 \label{sec:pickneutrino}
 
 For each neutrino event, the payload position is chosen at random from a set of positions along the ANITA flight path (see Figure~\ref{fig:ANITA_flightPath}).
 To simulate only those neutrino interactions that might lead to a detectable signal, interaction positions are limited to occur within the horizon as seen by the payload (roughly between 700 and 800\,km from the payload), and neutrino directions are chosen from an annulus on the sky consistent with viewing angles detectable at the payload (see Section~\ref{sec:weights}). 
-The maximum angle that the ray may diverge from the axis of the Cherenkov cone for the interaction to still be detectable depends on the electric field, the distance from the interaction to the payload and shower nature: this is typically between 10 and 13 degrees.
+The maximum angle that the ray may diverge from the axis of the Cherenkov cone for the interaction to still be detectable depends on the electric field, the distance from the interaction to the payload, and shower nature: this is typically between 10 and 13 degrees.
 %\icemc uses importance weights to account for the neutrino interaction position forced to occur within the payload horizon, and for the neutrino direction chosen to allow the ANITA instrument to detect it (see Section~\ref{sec:weights}).
 
 %Within that horizon, we stack the ice thicknesses of all the bins in longitude and latitude.  
@@ -46,7 +46,7 @@ The maximum angle that the ray may diverge from the axis of the Cherenkov cone f
 %latitudinal directions is chosen at random within the bin.  
 Both direct and reflected detection is simulated.
 In the first case the signal is propagated from the interaction position upwards to the payload. In the second case, the signal is propagated downwards
-towards to the ice-rock interface (approximated to a flat mirror)
+towards to the ice-rock interface, approximated as a flat mirror,
 where the signal is then reflected upwards towards the payload. 
 
 %The neutrino interaction direction is chosen at random in the
