--- a/4_propagationInIce.tex
+++ b/4_propagationInIce.tex
@@ -34,9 +34,6 @@
 %\end{equation}
 %due to the path length $d_{ice}$ and attenuation length $\ell_{attn}$ in ice.
 
-%The specular Fresnel coefficients $t_{||}$ and $t_{\perp}$ for the parallel and perpendicular components of the normalized transmitted electric field vector are calculated at the ice-air interface with respect to the local surface normal.
-%The surface normal includes the slopey-ness parameter as a local perturbation.
-
 The electric field is propagated to the payload using a standard ray tracing algorithm.
 The electric field magnitude at the payload position (before applying
 the ANITA instrument response) is calculated as follows:
@@ -49,19 +46,17 @@ the ANITA instrument response) is calculated as follows:
 The first factor after $\mathcal{E}^{(\mathrm{@ 1m})}$ accounts for propagation in ice, with $d_{\mathrm{ice}}$ being the path length and $\ell_{\mathrm{attn}}$ the attenuation length in ice. 
 The second factor accounts for the refraction from ice to air, using
 the specular Fresnel coefficients, $t_{||}$ and $t_{\perp}$, for the parallel and perpendicular components of the normalized transmitted electric field vector at the ice-air interface with respect to the local surface normal.
+The surface normal includes a Gaussian 1.2\% direction perturbation to account for surface slope effects.
 Finally, $F(\theta_{\mathrm{view}}-\theta_{\mathrm{Ch}})$ is a geometrical attenuation factor of the field strength in air resulting from viewing the Cherenkov emission ``off-cone'' at an angle $\theta_{\mathrm{view}}$ different from the Cherenkov angle $\theta_{\mathrm{Ch}}$.
 The functional form of $F$ is taken to be Gaussian and is set to zero for ($\theta_{\mathrm{view}}-\theta_{\mathrm{Ch}}$) > 20 $\Delta \theta_{\mathrm{Ch}}$, where $\Delta \theta_{\mathrm{Ch}}$ is the width of the Cherenkov cone. 
-%\CD{Say something about what happens for the reflected solution?}
-%\BS{You don't explicitly explain the spherical power intensity loss $\frac{1}{d_{ice}+d_{air}}$ factor below the Fresnel components?}
-
 %The user may set the attenuation length for radio in ice to be  a constant value (conservatively 700\,m), 
 
 Cherenkov radiation is radially polarized, and the in-ice polarization vector is calculated using the neutrino velocity vector and in-ice propagation vector, which lies radially outward from the Cherenkov cone.
 Attenuation lengths for radio in Antarctica are based on measurements performed at the Ross Ice Shelf and the South Pole~\cite{smex}.
-The index of refraction is taken as 1.79 for deep ice and 1.325 at the surface. A model for the firn (layers of packed snow) based on data taken by the RICE Collaboration~\cite{PhysRevD.73.082002} is used at depths shallower than 150\,m.
+The index of refraction is taken as 1.79 for deep ice and 1.325 at the surface. A model for the firn based on data taken by the RICE Collaboration~\cite{PhysRevD.73.082002} is used at depths shallower than 150\,m.
 
 Surface roughness acts to allow different portions of the ice surface to contribute transmitted power to the payload for a single event, due to new allowable scattering geometries at the air-ice interface.
-The University of Hawaii ANITA group developed a simulation program, used for the ANITA-I and ANITA-II flights, which included surface roughness effects. They found that ice surface roughness contributed to an increase in acceptance of roughly a factor of 2 at low energy (close to $10^{18}$\,eV) and 40\% at higher energy.
+The University of Hawaii ANITA group developed a simulation program, used for the ANITA-I and ANITA-II flights, which included surface roughness effects. They found that ice surface roughness contributed to an increase in acceptance of roughly a factor of 50\% at low energy (close to $10^{18}$\,eV) and 40\% at higher energy.
 \icemc currently does not include ice surface roughness effects, and hence conservatively underestimates the sensitivity of the ANITA flights. Future versions of \icemc will include these effects.
 
 %\subsection{Fresnel Factor}
